[package]
name = "remote_logger"
description = "A `tokio` based logger that can send log messages to remote target asynchronously"
license = "MIT"
authors = ["Sibaprasad Maiti <sibaprasad.maiti@aifalabs.com>"]
repository = "https://github.com/sibapaifa/remote-logger"
version = "0.1.0"
edition = "2021"

[features]
chrono-utc = ["dep:chrono"]
chrono-local = ["dep:chrono"]
default = []

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", optional = true }
log = { version = "0.4", features = ["kv", "kv_serde", "kv_std", "std"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt", "sync", "time"] }

[dev-dependencies]
tempfile = "3.15.0"
tokio = { version = "1", features = ["full"] }
